# mmopvp_backend

./: .gitignore  CMakeLists.txt  README.md  character_logic.c  character_logic.h  game.h  gameData.h  gameDataStructures.h  main.c  networking.c  networking.h
gamelogic/: area_of_effect.c  area_of_effect.h  character_state_machines.c  character_state_machines.h  projectile.c  projectile.h  selfCast.c  selfCast.h
